[gd_scene load_steps=4 format=3 uid="uid://b3ndig3pj7ypk"]

[ext_resource type="Script" uid="uid://cacatnu6vqwco" path="res://scenes/main.gd" id="1_0wfyh"]
[ext_resource type="PackedScene" uid="uid://dept5e6u218kl" path="res://scenes/input_controller/input_controller.tscn" id="1_o5qli"]
[ext_resource type="PackedScene" uid="uid://bf33rd7uc2ygo" path="res://scenes/slice_trail/slice_trail.tscn" id="3_sugp2"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_0wfyh")

[node name="InputController" parent="." instance=ExtResource("1_o5qli")]
enable_touch_fallback = false
debug_mode = true

[node name="GameArea" type="Node2D" parent="."]

[node name="SliceTrail" parent="." instance=ExtResource("3_sugp2")]

[node name="UI" type="CanvasLayer" parent="."]

[node name="HandStatus" type="ColorRect" parent="UI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -114.0
offset_top = -40.0
offset_right = 93.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0, 0.7262954, 0.5996966, 1)

[node name="ScoreLabel" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -21.5
offset_right = 21.5
offset_bottom = 23.0
grow_horizontal = 2
text = "Score"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InputModeLabel" type="Label" parent="UI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -21.0
offset_top = -23.0
offset_right = 21.0
grow_horizontal = 2
grow_vertical = 0
text = "Input"

[node name="DebugPanel" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HandStatusLabel" type="Label" parent="DebugPanel"]
layout_mode = 0
offset_left = 1101.0
offset_top = 5.0
offset_right = 1141.0
offset_bottom = 28.0

[node name="MousePosLabel" type="Label" parent="DebugPanel"]
layout_mode = 0
offset_left = 1101.0
offset_top = 44.0
offset_right = 1141.0
offset_bottom = 67.0
